--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ nav{
 
 .card {
     transition: transform 0.4s ease, box-shadow 0.4s ease;
+    margin-bottom: 10px;
 }
 
 .card:hover {
@@ -55,4 +56,25 @@ nav{
     background-color: #0056b3; 
     transform: translateY(-3px); 
 }
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1; 
+}
 
+video {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 100vh;
+    max-width: none;
+}
+#myVideo{
+    object-fit: cover; /* Ensures video covers the whole screen */
+    width: 100%;
+    height: 100%;
+}
